--- a/po/ca.po
+++ b/po/ca.po
@@ -8,23 +8,23 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-04-21 20:25-0400\n"
-"PO-Revision-Date: 2017-05-10 22:27+0000\n"
+"PO-Revision-Date: 2017-05-16 20:26+0000\n"
 "Last-Translator: toniem <toni.estevez@gmail.com>\n"
 "Language-Team: Catalan <ca@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2017-05-11 05:58+0000\n"
-"X-Generator: Launchpad (build 18366)\n"
+"X-Launchpad-Export-Date: 2017-05-17 07:01+0000\n"
+"X-Generator: Launchpad (build 18385)\n"
 "Language: ca\n"
 
 #: ../menulibre.desktop.in.h:1
 msgid "Menu Editor"
-msgstr "Editor de menús"
+msgstr "Editor del menú"
 
 #: ../menulibre.desktop.in.h:2
 msgid "Add or remove applications from the menu"
-msgstr "Afegeix o suprimeix aplicacions del menú"
+msgstr "Afegiu o suprimiu aplicacions del menú"
 
 #: ../data/ui/MenulibreWindow.ui.h:1
 msgid "Add _Launcher"
@@ -53,9 +53,9 @@ msgid ""
 "Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
 "XFCE, Old"
 msgstr ""
-"Llista dels entorns d'escriptori que no han de mostrar aquesta entrada de "
-"menú. Aquesta clau només es pot utilitzar si «Només mostra en» no està "
-"configurada.\n"
+"Llista dels entorns d'escriptori que no han de mostrar aquesta entrada del "
+"menú. Aquesta clau només es pot utilitzar si «Mostra només en» no està "
+"definida.\n"
 "Entre els valors possibles s'inclouen: GNOME, KDE, LXDE, MATE, Razor, ROX, "
 "TDE, Unity, XFCE i Old."
 
@@ -73,13 +73,13 @@ msgid ""
 msgstr ""
 "Llista dels entorns d'escriptori que han de mostrar aquesta entrada de menú. "
 "Els altres entorns no mostraran aquesta entrada. Aquesta clau només es pot "
-"utilitzar si «No mostris en» no està configurada.\n"
+"utilitzar si «No mostris en» no està definida.\n"
 "Entre els valors possibles s'inclouen: GNOME, KDE, LXDE, MATE, Razor, ROX, "
 "TDE, Unity, XFCE i Old."
 
 #: ../data/ui/MenulibreWindow.ui.h:11
 msgid "Only Shown In"
-msgstr "Només mostra en"
+msgstr "Mostra només en"
 
 #: ../data/ui/MenulibreWindow.ui.h:12
 msgid ""
@@ -87,9 +87,9 @@ msgid ""
 "file is not present or is not executable, this entry may not be shown in a "
 "menu."
 msgstr ""
-"Camí a un fitxer executable per determinar si s'ha instal·lat el programa. "
-"Si el fitxer no està present o no és executable, aquesta entrada es mostra "
-"en el menú."
+"Camí d'accés a un fitxer executable per determinar si s'ha instal·lat el "
+"programa. Si el fitxer no és present o no és executable, aquesta entrada no "
+"es mostra en el menú."
 
 #: ../data/ui/MenulibreWindow.ui.h:13
 msgid "Try Exec"
@@ -109,9 +109,9 @@ msgid ""
 "searching entries. These are not meant for display, and should not be "
 "redundant with the values of Name or GenericName."
 msgstr ""
-"Llista de paraules clau per descriure aquesta entrada de menú. Serveixen per "
-"ajudar en la recerca d'entrades. No tenen la finalitat de mostrar-se i no "
-"han de ser redundants amb els valors de Nom o Nom genèric."
+"Llista de paraules clau per descriure aquesta entrada del menú. Serveixen "
+"per ajudar en la recerca d'entrades. No tenen la finalitat de mostrar-se i "
+"no han de ser redundants amb el nom o el nom genèric de l'entrada."
 
 #: ../data/ui/MenulibreWindow.ui.h:17
 msgid "Keywords"
@@ -123,7 +123,7 @@ msgid ""
 "class or a WM name hint at least in one window."
 msgstr ""
 "Si s'especifica, es demanarà a l'aplicació que utilitzi la cadena de text "
-"com a una classe WM o un suggeriment de nom WM almenys en una finestra."
+"com una classe WM o un suggeriment de nom WM almenys en una finestra."
 
 #: ../data/ui/MenulibreWindow.ui.h:19
 msgid "Startup WM Class"
@@ -134,8 +134,8 @@ msgid ""
 "If set to \"True\", the result for the user is equivalent to the .desktop "
 "file not existing at all."
 msgstr ""
-"Si es configura com a «true», el resultat per a l'usuari és equivalent a que "
-"el fitxer .desktop no existeixi."
+"Si es defineix com a «true», el resultat per a l'usuari és equivalent a "
+"suprimir el fitxer .desktop."
 
 #: ../data/ui/MenulibreWindow.ui.h:21
 msgid "Hidden"
@@ -148,8 +148,8 @@ msgid ""
 "See http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s07.html "
 "for more information."
 msgstr ""
-"configureu aquesta clau com a «true» si l'activació per D-Bus és compatible "
-"amb aquesta aplicació i voleu usar-la.\n"
+"Definiu aquesta clau com a «true» si l'activació per D-Bus és compatible amb "
+"aquesta aplicació i voleu utilitzar-la.\n"
 "Vegeu http://standards.freedesktop.org/desktop-entry-"
 "spec/latest/ar01s07.html per a més informació."
 
@@ -163,11 +163,11 @@ msgstr "S'han detectat fitxers d'escriptori no vàlids. Consulteu els detalls"
 
 #: ../data/ui/MenulibreWindow.ui.h:26
 msgid "Browse Icons…"
-msgstr "Explora les icones..."
+msgstr "Explora les icones…"
 
 #: ../data/ui/MenulibreWindow.ui.h:27
 msgid "Browse Files..."
-msgstr "Explora els fitxers..."
+msgstr "Explora els fitxers…"
 
 #: ../data/ui/MenulibreWindow.ui.h:28 ../menulibre/Dialogs.py:38
 #: ../menulibre/MenulibreApplication.py:248
@@ -221,7 +221,7 @@ msgstr "<small><i>Nome del fitxer</i></small>"
 
 #: ../data/ui/MenulibreWindow.ui.h:40
 msgid "<big><b>Application Name</b></big>"
-msgstr "<big><b>Nom de l’aplicació</b></big>"
+msgstr "<big><b>Nom de l'aplicació</b></big>"
 
 #: ../data/ui/MenulibreWindow.ui.h:41
 msgid "Application Name"
@@ -243,6 +243,12 @@ msgid ""
 "See http://standards.freedesktop.org/desktop-entry-spec/desktop-entry-spec-"
 "latest.html#exec-variables for a list of supported arguments."
 msgstr ""
+"Programa per executar amb arguments. Aquesta clau és necessària si "
+"«Activable per D-BUS» no està definida com a «true» o cal compatibilitat amb "
+"implementacions que no entenen l'activació per D-Bus.\n"
+"Consulteu http://standards.freedesktop.org/desktop-entry-spec/desktop-entry-"
+"spec-latest.html#exec-variables per obtenir una llista d'arguments "
+"compatibles."
 
 #: ../data/ui/MenulibreWindow.ui.h:46
 msgid "Command"
@@ -254,7 +260,7 @@ msgstr "La carpeta de treball."
 
 #: ../data/ui/MenulibreWindow.ui.h:48
 msgid "Working Directory"
-msgstr "Directori de treball"
+msgstr "Carpeta de treball"
 
 #: ../data/ui/MenulibreWindow.ui.h:49
 msgid "<b>Application Details</b>"
@@ -263,32 +269,36 @@ msgstr "<b>Detalls de l'aplicació</b>"
 #: ../data/ui/MenulibreWindow.ui.h:50
 msgid "If set to \"True\", the program will be ran in a terminal window."
 msgstr ""
-"Si es configura com a \"true\", el programa s'execuatarà en una finestra de "
+"Si es defineix com a «true», el programa s'executarà en una finestra del "
 "terminal."
 
 #: ../data/ui/MenulibreWindow.ui.h:51
 msgid "Run in terminal"
-msgstr "Executa en terminal"
+msgstr "Executa en un terminal"
 
 #: ../data/ui/MenulibreWindow.ui.h:52
 msgid ""
 "If set to \"True\", a startup notification is sent. Usually means that a "
 "busy cursor is shown while the application launches."
 msgstr ""
+"Si es defineix com a «true», s'envia una notificació d'inici. Normalment vol "
+"dir que es mostra el cursor ocupat mentre s'inicia l'aplicació."
 
 #: ../data/ui/MenulibreWindow.ui.h:53
 msgid "Use startup notification"
-msgstr "Usa una notificació d’inici"
+msgstr "Usa la notificació d'inici"
 
 #: ../data/ui/MenulibreWindow.ui.h:54
 msgid ""
 "If set to \"True\", this entry will not be shown in menus, but will be "
 "available for MIME type associations etc."
 msgstr ""
+"Si es defineix com a «true», aquesta entrada no es mostrarà en el menú, però "
+"estarà disponible per a les associacions dels tipus MIME."
 
 #: ../data/ui/MenulibreWindow.ui.h:55
 msgid "Hide from menus"
-msgstr "Oculta-ho dels menús"
+msgstr "Oculta en el menú"
 
 #: ../data/ui/MenulibreWindow.ui.h:56
 msgid "<b>Options</b>"
@@ -316,7 +326,7 @@ msgstr "Nom"
 
 #: ../data/ui/MenulibreWindow.ui.h:62
 msgid "Select an icon…"
-msgstr "Selectionar una icona…"
+msgstr "Seleccioneu una icona…"
 
 #: ../data/ui/MenulibreWindow.ui.h:63 ../menulibre/Dialogs.py:62
 #: ../menulibre/Dialogs.py:85 ../menulibre/Dialogs.py:101
@@ -343,11 +353,11 @@ msgstr "columna"
 
 #: ../data/ui/MenulibreWindow.ui.h:68
 msgid "Log - Menulibre"
-msgstr ""
+msgstr "Registre - MenuLibre"
 
 #: ../data/ui/MenulibreWindow.ui.h:69
 msgid "Search terms…"
-msgstr "Cerca termes…"
+msgstr "Cerca…"
 
 #: ../menulibre/__init__.py:33
 msgid "Show debug messages"
@@ -364,17 +374,19 @@ msgstr "Copyright © 2012-2015 Sean Davis"
 
 #: ../menulibre/Dialogs.py:55
 msgid "Do you want to read the MenuLibre manual online?"
-msgstr ""
+msgstr "Voleu llegir el manual del MenuLibre en línia?"
 
 #: ../menulibre/Dialogs.py:56
 msgid ""
 "You will be redirected to the documentation website where the help pages are "
 "maintained."
 msgstr ""
+"Se us redirigirà al lloc web de documentació, on es mantenen les pàgines "
+"d'ajuda."
 
 #: ../menulibre/Dialogs.py:63
 msgid "Read Online"
-msgstr ""
+msgstr "Llegir en línia"
 
 #: ../menulibre/Dialogs.py:64
 msgid "Online Documentation"
@@ -382,11 +394,11 @@ msgstr "Documentació en línia"
 
 #: ../menulibre/Dialogs.py:75
 msgid "Do you want to save the changes before closing?"
-msgstr ""
+msgstr "Voleu desar els canvis abans de tancar?"
 
 #: ../menulibre/Dialogs.py:76
 msgid "If you don't save the launcher, all the changes will be lost.'"
-msgstr ""
+msgstr "Si no deseu el llançador, es perdran tots els canvis."
 
 #: ../menulibre/Dialogs.py:83 ../menulibre/Dialogs.py:99
 msgid "Save Changes"
@@ -403,29 +415,31 @@ msgstr "Desa"
 
 #: ../menulibre/Dialogs.py:90
 msgid "Do you want to save the changes before leaving this launcher?"
-msgstr ""
+msgstr "Voleu desar els canvis abans de sortir d'aquest llançador?"
 
 #: ../menulibre/Dialogs.py:92
 msgid "If you don't save the launcher, all the changes will be lost."
-msgstr ""
+msgstr "Si no deseu el llançador, es perdran tots els canvis."
 
 #: ../menulibre/Dialogs.py:106
 msgid "This cannot be undone."
-msgstr "Això no es pot desfer."
+msgstr "Aquesta acció no es pot desfer."
 
 #: ../menulibre/Dialogs.py:115
 msgid "Are you sure you want to restore this launcher?"
-msgstr ""
+msgstr "Segur que voleu restaurar aquest llançador?"
 
 #: ../menulibre/Dialogs.py:116
 msgid ""
 "All changes since the last saved state will be lost and cannot be restored "
 "automatically."
 msgstr ""
+"Tots els canvis des de l'últim estat desat es perdran i no es podran "
+"restaurar de forma automàtica."
 
 #: ../menulibre/Dialogs.py:125 ../menulibre/Dialogs.py:126
 msgid "Restore Launcher"
-msgstr ""
+msgstr "Restaura un llançador"
 
 #: ../menulibre/Dialogs.py:133 ../menulibre/MenulibreIconSelection.py:80
 msgid "OK"
@@ -434,7 +448,7 @@ msgstr "D'acord"
 #: ../menulibre/MenuEditor.py:90 ../menulibre/MenulibreApplication.py:1078
 #: ../menulibre/MenulibreApplication.py:1537
 msgid "Separator"
-msgstr ""
+msgstr "Separador"
 
 #. Standard Items
 #: ../menulibre/MenulibreApplication.py:45
@@ -484,60 +498,60 @@ msgstr "WINE"
 #. Desktop Environment
 #: ../menulibre/MenulibreApplication.py:57
 msgid "Desktop configuration"
-msgstr ""
+msgstr "Configuració de l'escriptori"
 
 #: ../menulibre/MenulibreApplication.py:58
 msgid "User configuration"
-msgstr ""
+msgstr "Configuració de l'usuari"
 
 #: ../menulibre/MenulibreApplication.py:59
 msgid "Hardware configuration"
-msgstr ""
+msgstr "Configuració del maquinari"
 
 #. GNOME Specific
 #: ../menulibre/MenulibreApplication.py:61
 msgid "GNOME application"
-msgstr ""
+msgstr "Aplicació del GNOME"
 
 #: ../menulibre/MenulibreApplication.py:62
 msgid "GTK+ application"
-msgstr ""
+msgstr "Aplicació GTK+"
 
 #: ../menulibre/MenulibreApplication.py:63
 msgid "GNOME user configuration"
-msgstr ""
+msgstr "Configuració de l'usuari del GNOME"
 
 #: ../menulibre/MenulibreApplication.py:64
 msgid "GNOME hardware configuration"
-msgstr ""
+msgstr "Configuració del maquinari del GNOME"
 
 #: ../menulibre/MenulibreApplication.py:65
 #: ../menulibre/MenulibreApplication.py:66
 msgid "GNOME system configuration"
-msgstr ""
+msgstr "Configuració del sistema del GNOME"
 
 #. Xfce Specific
 #: ../menulibre/MenulibreApplication.py:68
 #: ../menulibre/MenulibreApplication.py:69
 msgid "Xfce menu item"
-msgstr ""
+msgstr "Element del menú del l'Xfce"
 
 #: ../menulibre/MenulibreApplication.py:70
 msgid "Xfce toplevel menu item"
-msgstr ""
+msgstr "Element del menú de nivell superior de l'Xfce"
 
 #: ../menulibre/MenulibreApplication.py:71
 msgid "Xfce user configuration"
-msgstr ""
+msgstr "Configuració de l'usuari de l'Xfce"
 
 #: ../menulibre/MenulibreApplication.py:72
 msgid "Xfce hardware configuration"
-msgstr ""
+msgstr "Configuració del maquinari de l'Xfce"
 
 #: ../menulibre/MenulibreApplication.py:73
 #: ../menulibre/MenulibreApplication.py:74
 msgid "Xfce system configuration"
-msgstr ""
+msgstr "Configuració del sistema de l'Xfce"
 
 #: ../menulibre/MenulibreApplication.py:122
 #: ../menulibre/MenulibreApplication.py:167
@@ -546,7 +560,7 @@ msgstr "Altres"
 
 #: ../menulibre/MenulibreApplication.py:225
 msgid "MenuLibre cannot be run as root."
-msgstr ""
+msgstr "El Menulibre no es pot executar amb permisos d'administrador."
 
 #: ../menulibre/MenulibreApplication.py:226
 msgid ""
@@ -554,30 +568,33 @@ msgid ""
 "href='https://wiki.smdavis.us/doku.php?id=menulibre_faq'>online "
 "documentation</a> for more information."
 msgstr ""
+"Consulteu la <a "
+"href='https://wiki.smdavis.us/doku.php?id=menulibre_faq'>documentació en "
+"línia</a> per obtenir més informació."
 
 #: ../menulibre/MenulibreApplication.py:325
 msgid "Add _Launcher..."
-msgstr "Afegeix un _llançador..."
+msgstr "Afegeix un _llançador…"
 
 #: ../menulibre/MenulibreApplication.py:326
 msgid "Add Launcher..."
-msgstr "Afegeix un llançador..."
+msgstr "Afegeix un llançador…"
 
 #: ../menulibre/MenulibreApplication.py:332
 msgid "Add _Directory..."
-msgstr "Afegeix una _carpeta..."
+msgstr "Afegeix una _carpeta…"
 
 #: ../menulibre/MenulibreApplication.py:333
 msgid "Add Directory..."
-msgstr "Afegeix una carpeta..."
+msgstr "Afegeix una carpeta…"
 
 #: ../menulibre/MenulibreApplication.py:339
 msgid "_Add Separator..."
-msgstr ""
+msgstr "_Afegeix un separador…"
 
 #: ../menulibre/MenulibreApplication.py:340
 msgid "Add Separator..."
-msgstr ""
+msgstr "Afegeix un separador…"
 
 #: ../menulibre/MenulibreApplication.py:346
 msgid "_Save"
@@ -601,7 +618,7 @@ msgstr "_Executa"
 
 #: ../menulibre/MenulibreApplication.py:375
 msgid "Execute Launcher"
-msgstr ""
+msgstr "Executa el llançador"
 
 #: ../menulibre/MenulibreApplication.py:381
 msgid "_Delete"
@@ -648,11 +665,11 @@ msgstr "Claus avançades"
 
 #: ../menulibre/MenulibreApplication.py:702
 msgid "ThisEntry"
-msgstr ""
+msgstr "Aquesta entrada"
 
 #: ../menulibre/MenulibreApplication.py:720
 msgid "Select a category"
-msgstr ""
+msgstr "Seleccioneu una categoria"
 
 #: ../menulibre/MenulibreApplication.py:723
 msgid "Category Name"
@@ -660,7 +677,7 @@ msgstr "Nom de la categoria"
 
 #: ../menulibre/MenulibreApplication.py:807
 msgid "This Entry"
-msgstr ""
+msgstr "Aquesta entrada"
 
 #: ../menulibre/MenulibreApplication.py:862
 msgid "New Shortcut"
@@ -668,34 +685,37 @@ msgstr "Drecera nova"
 
 #: ../menulibre/MenulibreApplication.py:1008
 msgid "Select a working directory..."
-msgstr ""
+msgstr "Seleccioneu una carpeta de treball…"
 
 #: ../menulibre/MenulibreApplication.py:1011
 msgid "Select an executable..."
-msgstr ""
+msgstr "Seleccioneu un executable…"
 
 #: ../menulibre/MenulibreApplication.py:1033
 msgid "Cannot add subdirectories to preinstalled system paths."
 msgstr ""
+"No es poden afegir subcarpetes als camins del sistema preinstal·lats."
 
 #. Display a dialog saying this item is missing
 #: ../menulibre/MenulibreApplication.py:1129
 msgid "No Longer Installed"
-msgstr ""
+msgstr "Ja no està instal·lat"
 
 #: ../menulibre/MenulibreApplication.py:1130
 msgid ""
 "This launcher has been removed from the system.\n"
 "Selecting the next available item."
 msgstr ""
+"Aquest llançador s'ha suprimit del sistema.\n"
+"Se selecciona el següent element disponible."
 
 #: ../menulibre/MenulibreApplication.py:1230
 msgid "You do not have permission to delete this file."
-msgstr ""
+msgstr "No teniu permís per suprimir aquest fitxer."
 
 #: ../menulibre/MenulibreApplication.py:1462
 msgid "New Launcher"
-msgstr ""
+msgstr "Llançador nou"
 
 #: ../menulibre/MenulibreApplication.py:1520
 msgid "New Directory"
@@ -704,16 +724,16 @@ msgstr "Carpeta nova"
 #: ../menulibre/MenulibreApplication.py:1785
 #, python-format
 msgid "Could not find \"%s\" in your PATH."
-msgstr ""
+msgstr "No s'ha pogut trobar «%s» en el camí de cerca."
 
 #: ../menulibre/MenulibreApplication.py:1807
 msgid "Are you sure you want to delete this separator?"
-msgstr ""
+msgstr "Segur que voleu esborrar aquest separador?"
 
 #: ../menulibre/MenulibreApplication.py:1810
 #, python-format
 msgid "Are you sure you want to delete \"%s\"?"
-msgstr "Esteu segur que voleu suprimir «%s»?"
+msgstr "Segur que voleu suprimir «%s»?"
 
 #: ../menulibre/MenulibreApplication.py:1866
 #, python-format
@@ -724,18 +744,23 @@ msgid ""
 "\n"
 "%s"
 msgstr ""
+"Els fitxers d'escriptori següents no s'han pogut analitzar per la biblioteca "
+"subjacent i, per tant, no es mostraran. Investigueu aquests problemes amb el "
+"responsable del paquet associat:\n"
+"\n"
+"%s"
 
 #: ../menulibre/MenulibreApplication.py:1872
 msgid "All desktop files have been parsed successfully."
-msgstr ""
+msgstr "Tots els fitxers d'escriptori s'han analitzat correctament."
 
 #: ../menulibre/MenulibreApplication.py:1901
 msgid "Check for bad desktop files"
-msgstr ""
+msgstr "Comprova si hi ha fitxers d'escriptori incorrectes"
 
 #: ../menulibre/MenulibreIconSelection.py:76
 msgid "Select an image"
-msgstr ""
+msgstr "Seleccioneu una imatge"
 
 #: ../menulibre/MenulibreIconSelection.py:84
 msgid "Images"
@@ -752,55 +777,60 @@ msgstr "Element de menú nou"
 
 #: ../menulibre/MenulibreXdg.py:55
 msgid "A small descriptive blurb about this application."
-msgstr "Una descripció curta d’aquesta aplicació"
+msgstr "Una descripció curta d'aquesta aplicació."
 
 #: ../menulibre/util.py:455
 #, python-format
 msgid "%s: Unable to load as a key file due to the following error: %s"
 msgstr ""
+"%s: No es pot carregar com a un fitxer de claus a causa de l'error següent:% "
+"s"
 
 #: ../menulibre/util.py:463
 #, python-format
 msgid "%s: Start group is invalid - currently '%s', should be '%s'"
-msgstr ""
+msgstr "%s: El grup d'inici no és vàlid; actualment «%s», ha de ser «%s»"
 
 #: ../menulibre/util.py:472
 #, python-format
 msgid "%s: Type key was not found"
-msgstr ""
+msgstr "%s: No s'ha trobat la clau de tipus"
 
 #: ../menulibre/util.py:475
 #, python-format
 msgid "%s: Type is invalid - currently '%s', should be '%s'"
-msgstr ""
+msgstr "%s: El tipus no és vàlid; actualment «%s», ha de ser «%s»"
 
 #: ../menulibre/util.py:488
 #, python-format
 msgid "%s: Try exec program '%s' has not been found in the PATH"
 msgstr ""
+"%s: El programa executable de prova «%s» no s'ha trobat en el camí de cerca"
 
 #: ../menulibre/util.py:496
 #, python-format
 msgid "%s: Exec key not found"
-msgstr ""
+msgstr "%s: No s'ha trobat la clau de executable"
 
 #: ../menulibre/util.py:502
 msgid ""
 "%s: Exec program '%' is not a valid shell command according to "
 "GLib.shell_parse_argv, error: %s"
 msgstr ""
+"%s: El programa executable «%» no és una ordre vàlida segons "
+"GLib.shell_parse_argv, error: %s"
 
 #: ../menulibre/util.py:507
 #, python-format
 msgid "%s: Exec program '%s' has not been found in the PATH"
-msgstr ""
+msgstr "%s: El programa executable «%s» no s'ha trobat en el camí de cerca"
 
 #. At this point the desktop file is valid - execution should never reach
 #. here
 #: ../menulibre/util.py:512
 #, python-format
 msgid "%s: Desktop file is valid??"
-msgstr ""
+msgstr "%s: El fitxer d'escriptori és vàlid?"
 
 #~ msgid "Icon Name"
 #~ msgstr "Nom de la icona"
