--- a/po/es.po
+++ b/po/es.po
@@ -8,19 +8,19 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-04-21 20:25-0400\n"
-"PO-Revision-Date: 2017-05-08 21:58+0000\n"
+"PO-Revision-Date: 2017-05-16 20:42+0000\n"
 "Last-Translator: toniem <toni.estevez@gmail.com>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2017-05-09 06:16+0000\n"
-"X-Generator: Launchpad (build 18366)\n"
+"X-Launchpad-Export-Date: 2017-05-17 07:01+0000\n"
+"X-Generator: Launchpad (build 18385)\n"
 "Language: es\n"
 
 #: ../menulibre.desktop.in.h:1
 msgid "Menu Editor"
-msgstr "Editor de menús"
+msgstr "Editor del menú"
 
 #: ../menulibre.desktop.in.h:2
 msgid "Add or remove applications from the menu"
@@ -53,7 +53,7 @@ msgid ""
 "Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
 "XFCE, Old"
 msgstr ""
-"Lista de los entornos de escritorio que no deben mostrar esta entrada de "
+"Lista de los entornos de escritorio que no deben mostrar esta entrada del "
 "menú. Esta clave solo se puede usar si «Solo mostrar en» no está "
 "configurada.\n"
 "Entre los valores posibles se incluyen: GNOME, KDE, LXDE, MATE, Razor, ROX, "
@@ -71,7 +71,7 @@ msgid ""
 "Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
 "XFCE, Old"
 msgstr ""
-"Lista de los entornos de escritorio que deben mostrar esta entrada de menú. "
+"Lista de los entornos de escritorio que deben mostrar esta entrada del menú. "
 "Los demás entornos no mostrarán esta entrada. Esta clave solo se puede usar "
 "si «No mostrar en» no está configurada.\n"
 "Entre los valores posibles se incluyen: GNOME, KDE, LXDE, MATE, Razor, ROX, "
@@ -87,12 +87,13 @@ msgid ""
 "file is not present or is not executable, this entry may not be shown in a "
 "menu."
 msgstr ""
-"Ruta al archivo ejecutable para determinar si el programa está instalado. Si "
-"el archivo no existe o no es ejecutable, esta entrada no se muestra en menú."
+"Ruta de acceso a un archivo ejecutable para determinar si el programa está "
+"instalado. Si el archivo no existe o no es ejecutable, esta entrada no se "
+"muestra en el menú."
 
 #: ../data/ui/MenulibreWindow.ui.h:13
 msgid "Try Exec"
-msgstr "Probar ejecutable"
+msgstr "Probar el ejecutable"
 
 #: ../data/ui/MenulibreWindow.ui.h:14
 msgid "The MIME type(s) supported by this application."
@@ -108,9 +109,9 @@ msgid ""
 "searching entries. These are not meant for display, and should not be "
 "redundant with the values of Name or GenericName."
 msgstr ""
-"Lista de palabras clave para describir esta entrada de menú. Sirven para "
+"Lista de palabras clave para describir esta entrada del menú. Sirven para "
 "ayudar en la búsqueda de entradas. No tienen la finalidad de mostrarse y no "
-"deben ser redundantes con los valores de Nombre o Nombre genérico."
+"deben ser redundantes con el nombre o el nombre genérico de la entrada."
 
 #: ../data/ui/MenulibreWindow.ui.h:17
 msgid "Keywords"
@@ -134,7 +135,7 @@ msgid ""
 "file not existing at all."
 msgstr ""
 "Si se configura como «true», el resultado para el usuario es equivalente a "
-"que el archivo .desktop no exista."
+"eliminar el archivo .desktop."
 
 #: ../data/ui/MenulibreWindow.ui.h:21
 msgid "Hidden"
@@ -149,8 +150,8 @@ msgid ""
 msgstr ""
 "Configure esta clave como «true»  si la activación por D-Bus es compatible "
 "con esta aplicación y quiere usarla.\n"
-"Véase http://standards.freedesktop.org/desktop-entry-"
-"spec/latest/ar01s07.html para más información."
+"Consulte http://standards.freedesktop.org/desktop-entry-"
+"spec/latest/ar01s07.html para obtener más información."
 
 #: ../data/ui/MenulibreWindow.ui.h:24
 msgid "DBUS Activatable"
@@ -159,7 +160,7 @@ msgstr "Activable por D-BUS"
 #: ../data/ui/MenulibreWindow.ui.h:25
 msgid "Invalid desktop files detected! Please see details"
 msgstr ""
-"Se detectaron archivos de escritorio no válidos. Consulte los detalles"
+"Se han detectado archivos de escritorio no válidos. Consulte los detalles"
 
 #: ../data/ui/MenulibreWindow.ui.h:26
 msgid "Browse Icons…"
@@ -193,7 +194,7 @@ msgstr "Revertir"
 
 #: ../data/ui/MenulibreWindow.ui.h:33
 msgid "Test Launcher"
-msgstr "Provar lanzador"
+msgstr "Probar lanzador"
 
 #: ../data/ui/MenulibreWindow.ui.h:34 ../menulibre/MenulibreApplication.py:382
 msgid "Delete"
@@ -257,11 +258,11 @@ msgstr "Orden"
 
 #: ../data/ui/MenulibreWindow.ui.h:47
 msgid "The working directory."
-msgstr "El directorio de trabajo."
+msgstr "La carpeta de trabajo."
 
 #: ../data/ui/MenulibreWindow.ui.h:48
 msgid "Working Directory"
-msgstr "Directorio de trabajo"
+msgstr "Carpeta de trabajo"
 
 #: ../data/ui/MenulibreWindow.ui.h:49
 msgid "<b>Application Details</b>"
@@ -270,7 +271,7 @@ msgstr "<b>Detalles de la aplicación</b>"
 #: ../data/ui/MenulibreWindow.ui.h:50
 msgid "If set to \"True\", the program will be ran in a terminal window."
 msgstr ""
-"Si se configura como  «true», el programa se ejecutará en una ventana de "
+"Si se configura como «true», el programa se ejecutará en una ventana del "
 "terminal."
 
 #: ../data/ui/MenulibreWindow.ui.h:51
@@ -288,19 +289,19 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:53
 msgid "Use startup notification"
-msgstr "Usar notificación de inicio"
+msgstr "Usar la notificación de inicio"
 
 #: ../data/ui/MenulibreWindow.ui.h:54
 msgid ""
 "If set to \"True\", this entry will not be shown in menus, but will be "
 "available for MIME type associations etc."
 msgstr ""
-"Si se configura como «true», esta entrada no se mostrará en los menús, pero "
-"estará disponible para las asociaciones del tipo MIME."
+"Si se configura como «true», esta entrada no se mostrará en el menú, pero "
+"estará disponible para las asociaciones de los tipos MIME."
 
 #: ../data/ui/MenulibreWindow.ui.h:55
 msgid "Hide from menus"
-msgstr "Ocultar en los menús"
+msgstr "Ocultar en el menú"
 
 #: ../data/ui/MenulibreWindow.ui.h:56
 msgid "<b>Options</b>"
@@ -316,7 +317,7 @@ msgstr "Quitar"
 
 #: ../data/ui/MenulibreWindow.ui.h:59
 msgid "Clear"
-msgstr "Vaciar"
+msgstr "Limpiar"
 
 #: ../data/ui/MenulibreWindow.ui.h:60
 msgid "Show"
@@ -355,11 +356,11 @@ msgstr "columna"
 
 #: ../data/ui/MenulibreWindow.ui.h:68
 msgid "Log - Menulibre"
-msgstr "Registro - Menulibre"
+msgstr "Registro - MenuLibre"
 
 #: ../data/ui/MenulibreWindow.ui.h:69
 msgid "Search terms…"
-msgstr "Términos de búsqueda…"
+msgstr "Buscar…"
 
 #: ../menulibre/__init__.py:33
 msgid "Show debug messages"
@@ -372,7 +373,7 @@ msgstr "Acerca de MenuLibre"
 
 #: ../menulibre/Dialogs.py:40
 msgid "Copyright © 2012-2015 Sean Davis"
-msgstr "© 2012-2015 Sean Davis"
+msgstr "Copyright © 2012-2015 Sean Davis"
 
 #: ../menulibre/Dialogs.py:55
 msgid "Do you want to read the MenuLibre manual online?"
@@ -383,7 +384,7 @@ msgid ""
 "You will be redirected to the documentation website where the help pages are "
 "maintained."
 msgstr ""
-"Se le redirigirá al sitio web de documentación, en el que se mantienen las "
+"Se le redirigirá al sitio web de documentación, donde se mantienen las "
 "páginas de ayuda."
 
 #: ../menulibre/Dialogs.py:63
@@ -404,7 +405,7 @@ msgstr "Si no guarda el lanzador, se perderán todos los cambios .'"
 
 #: ../menulibre/Dialogs.py:83 ../menulibre/Dialogs.py:99
 msgid "Save Changes"
-msgstr "Guardar Cambios"
+msgstr "Guardar cambios"
 
 #: ../menulibre/Dialogs.py:84 ../menulibre/Dialogs.py:100
 msgid "Don't Save"
@@ -425,19 +426,19 @@ msgstr "Si no guarda el lanzador, se perderán todos los cambios."
 
 #: ../menulibre/Dialogs.py:106
 msgid "This cannot be undone."
-msgstr "Esto no se puede deshacer."
+msgstr "Esta acción no se puede deshacer."
 
 #: ../menulibre/Dialogs.py:115
 msgid "Are you sure you want to restore this launcher?"
-msgstr "¿Está seguro que desea restaurar este lanzador?"
+msgstr "¿Seguro que quiere restaurar este lanzador?"
 
 #: ../menulibre/Dialogs.py:116
 msgid ""
 "All changes since the last saved state will be lost and cannot be restored "
 "automatically."
 msgstr ""
-"Todos los cambios desde el último estado guardado se perderán y no se pueden "
-"recuperar de forma automática."
+"Todos los cambios desde el último estado guardado se perderán y no se "
+"puedrán restaurar de forma automática."
 
 #: ../menulibre/Dialogs.py:125 ../menulibre/Dialogs.py:126
 msgid "Restore Launcher"
@@ -500,15 +501,15 @@ msgstr "WINE"
 #. Desktop Environment
 #: ../menulibre/MenulibreApplication.py:57
 msgid "Desktop configuration"
-msgstr "Configuración de escritorio"
+msgstr "Configuración del escritorio"
 
 #: ../menulibre/MenulibreApplication.py:58
 msgid "User configuration"
-msgstr "Configuración de usuario"
+msgstr "Configuración del usuario"
 
 #: ../menulibre/MenulibreApplication.py:59
 msgid "Hardware configuration"
-msgstr "Configuración de hardware"
+msgstr "Configuración del hardware"
 
 #. GNOME Specific
 #: ../menulibre/MenulibreApplication.py:61
@@ -521,11 +522,11 @@ msgstr "Aplicación GTK+"
 
 #: ../menulibre/MenulibreApplication.py:63
 msgid "GNOME user configuration"
-msgstr "Configuración de usuario de GNOME"
+msgstr "Configuración del usuario de GNOME"
 
 #: ../menulibre/MenulibreApplication.py:64
 msgid "GNOME hardware configuration"
-msgstr "Configuración de Hardware GNOME"
+msgstr "Configuración del hardware de GNOME"
 
 #: ../menulibre/MenulibreApplication.py:65
 #: ../menulibre/MenulibreApplication.py:66
@@ -536,19 +537,19 @@ msgstr "Configuración del sistema de GNOME"
 #: ../menulibre/MenulibreApplication.py:68
 #: ../menulibre/MenulibreApplication.py:69
 msgid "Xfce menu item"
-msgstr "Elemento de menú de Xfce"
+msgstr "Elemento del menú de Xfce"
 
 #: ../menulibre/MenulibreApplication.py:70
 msgid "Xfce toplevel menu item"
-msgstr "Elemento de menú de nivel superior de Xfce"
+msgstr "Elemento del menú de nivel superior de Xfce"
 
 #: ../menulibre/MenulibreApplication.py:71
 msgid "Xfce user configuration"
-msgstr "Configuración de usuario de Xfce"
+msgstr "Configuración del usuario de Xfce"
 
 #: ../menulibre/MenulibreApplication.py:72
 msgid "Xfce hardware configuration"
-msgstr "Configuración de Hardware de Xfce"
+msgstr "Configuración del hardware de Xfce"
 
 #: ../menulibre/MenulibreApplication.py:73
 #: ../menulibre/MenulibreApplication.py:74
@@ -558,11 +559,11 @@ msgstr "Configuración del sistema de Xfce"
 #: ../menulibre/MenulibreApplication.py:122
 #: ../menulibre/MenulibreApplication.py:167
 msgid "Other"
-msgstr "Otro"
+msgstr "Otras"
 
 #: ../menulibre/MenulibreApplication.py:225
 msgid "MenuLibre cannot be run as root."
-msgstr "No se puede ejecutar MenuLibre con permisos administrativos."
+msgstr "No se puede ejecutar MenuLibre con permisos de administrador."
 
 #: ../menulibre/MenulibreApplication.py:226
 msgid ""
@@ -570,33 +571,33 @@ msgid ""
 "href='https://wiki.smdavis.us/doku.php?id=menulibre_faq'>online "
 "documentation</a> for more information."
 msgstr ""
-"Vea la <a "
+"Consulte la <a "
 "href='https://wiki.smdavis.us/doku.php?id=menulibre_faq'>documentación en "
-"línea</a> para más información."
+"línea</a> para obtener más información."
 
 #: ../menulibre/MenulibreApplication.py:325
 msgid "Add _Launcher..."
-msgstr "Añadir_Lanzador..."
+msgstr "Añadir _lanzador…"
 
 #: ../menulibre/MenulibreApplication.py:326
 msgid "Add Launcher..."
-msgstr "Añadir lanzador..."
+msgstr "Añadir lanzador…"
 
 #: ../menulibre/MenulibreApplication.py:332
 msgid "Add _Directory..."
-msgstr "Añadir_Directorio..."
+msgstr "Aña_dir carpeta…"
 
 #: ../menulibre/MenulibreApplication.py:333
 msgid "Add Directory..."
-msgstr "Añadir directorio..."
+msgstr "Añadir carpeta…"
 
 #: ../menulibre/MenulibreApplication.py:339
 msgid "_Add Separator..."
-msgstr "_Añadir Separador..."
+msgstr "_Añadir Separador…"
 
 #: ../menulibre/MenulibreApplication.py:340
 msgid "Add Separator..."
-msgstr "Añadir separador..."
+msgstr "Añadir separador…"
 
 #: ../menulibre/MenulibreApplication.py:346
 msgid "_Save"
@@ -624,7 +625,7 @@ msgstr "Ejecutar lanzador"
 
 #: ../menulibre/MenulibreApplication.py:381
 msgid "_Delete"
-msgstr "_Borrar"
+msgstr "_Eliminar"
 
 #: ../menulibre/MenulibreApplication.py:388
 msgid "_Quit"
@@ -663,11 +664,11 @@ msgstr "Acciones"
 
 #: ../menulibre/MenulibreApplication.py:555
 msgid "Advanced"
-msgstr "Avanzado"
+msgstr "Claves avanzadas"
 
 #: ../menulibre/MenulibreApplication.py:702
 msgid "ThisEntry"
-msgstr "EstaEntrada"
+msgstr "Esta entrada"
 
 #: ../menulibre/MenulibreApplication.py:720
 msgid "Select a category"
@@ -683,20 +684,20 @@ msgstr "Esta entrada"
 
 #: ../menulibre/MenulibreApplication.py:862
 msgid "New Shortcut"
-msgstr "Nuevo acceso directo"
+msgstr "Acceso directo nuevo"
 
 #: ../menulibre/MenulibreApplication.py:1008
 msgid "Select a working directory..."
-msgstr "Seleccione un directorio de trabajo..."
+msgstr "Seleccione una carpeta de trabajo…"
 
 #: ../menulibre/MenulibreApplication.py:1011
 msgid "Select an executable..."
-msgstr "Seleccionar un ejecutable..."
+msgstr "Seleccione un ejecutable…"
 
 #: ../menulibre/MenulibreApplication.py:1033
 msgid "Cannot add subdirectories to preinstalled system paths."
 msgstr ""
-"No se pueden añadir subdirectorios a rutas del sistema preinstaladas."
+"No se pueden añadir subcarpetas a las rutas del sistema preinstaladas."
 
 #. Display a dialog saying this item is missing
 #: ../menulibre/MenulibreApplication.py:1129
@@ -708,34 +709,34 @@ msgid ""
 "This launcher has been removed from the system.\n"
 "Selecting the next available item."
 msgstr ""
-"Este lanzador ha sido eliminado del sistema.\n"
-"Seleccionando el siguiente elemento disponible."
+"Este lanzador se ha eliminado del sistema.\n"
+"Se selecciona el siguiente elemento disponible."
 
 #: ../menulibre/MenulibreApplication.py:1230
 msgid "You do not have permission to delete this file."
-msgstr "Usted no tiene permiso para eliminar este archivo."
+msgstr "No tiene permiso para eliminar este archivo."
 
 #: ../menulibre/MenulibreApplication.py:1462
 msgid "New Launcher"
-msgstr "Nuevo lanzador"
+msgstr "Lanzador nuevo"
 
 #: ../menulibre/MenulibreApplication.py:1520
 msgid "New Directory"
-msgstr "Nuevo directorio"
+msgstr "Carpeta nueva"
 
 #: ../menulibre/MenulibreApplication.py:1785
 #, python-format
 msgid "Could not find \"%s\" in your PATH."
-msgstr "No se pudo encontrar «%s» en la RUTA."
+msgstr "No se ha podido encontrar «%s» en la ruta de búsqueda."
 
 #: ../menulibre/MenulibreApplication.py:1807
 msgid "Are you sure you want to delete this separator?"
-msgstr "¿Está seguro que desea eliminar este separador?"
+msgstr "¿Seguro que quiere eliminar este separador?"
 
 #: ../menulibre/MenulibreApplication.py:1810
 #, python-format
 msgid "Are you sure you want to delete \"%s\"?"
-msgstr "¿Está seguro de que quiere eliminar \"%s\"?"
+msgstr "¿Seguro de que quiere eliminar «%s»?"
 
 #: ../menulibre/MenulibreApplication.py:1866
 #, python-format
@@ -747,8 +748,8 @@ msgid ""
 "%s"
 msgstr ""
 "Los archivos de escritorio siguientes no se han podido analizar por la "
-"biblioteca subyacente y, por lo tanto, no aparecerán en Menulibre. "
-"Investigue estos problemas con el responsable del paquete asociado.\n"
+"biblioteca subyacente y, por lo tanto, no se mostrarán. Investigue estos "
+"problemas con el responsable del paquete asociado:\n"
 "\n"
 "%s"
 
@@ -762,7 +763,7 @@ msgstr "Comprobar si hay archivos de escritorio incorrectos"
 
 #: ../menulibre/MenulibreIconSelection.py:76
 msgid "Select an image"
-msgstr "Seleccionar una imagen"
+msgstr "Seleccione una imagen"
 
 #: ../menulibre/MenulibreIconSelection.py:84
 msgid "Images"
@@ -779,7 +780,7 @@ msgstr "Elemento de menú nuevo"
 
 #: ../menulibre/MenulibreXdg.py:55
 msgid "A small descriptive blurb about this application."
-msgstr "Una pequeña propaganda descriptiva sobre esta aplicación."
+msgstr "Una descripción corta de esta aplicación."
 
 #: ../menulibre/util.py:455
 #, python-format
@@ -807,7 +808,8 @@ msgstr "%s: El tipo no es válido; actualmente «%s», debe ser «%s»"
 #, python-format
 msgid "%s: Try exec program '%s' has not been found in the PATH"
 msgstr ""
-"%s: El programa ejecutable de prueba «%s» no se ha encontrado en la RUTA"
+"%s: El programa ejecutable de prueba «%s» no se ha encontrado en la ruta de "
+"búsqueda"
 
 #: ../menulibre/util.py:496
 #, python-format
@@ -825,7 +827,8 @@ msgstr ""
 #: ../menulibre/util.py:507
 #, python-format
 msgid "%s: Exec program '%s' has not been found in the PATH"
-msgstr "%s: El programa ejectuable «%s» no se ha encontrado en la RUTA"
+msgstr ""
+"%s: El programa ejecutable «%s» no se ha encontrado en la ruta de búsqueda"
 
 #. At this point the desktop file is valid - execution should never reach
 #. here
