--- a/po/de.po
+++ b/po/de.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2017-04-21 20:25-0400\n"
-"PO-Revision-Date: 2014-06-05 15:45+0000\n"
+"PO-Revision-Date: 2017-07-04 12:34+0000\n"
 "Last-Translator: Tobias Bannert <tobannert@gmail.com>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2017-04-23 05:41+0000\n"
-"X-Generator: Launchpad (build 18361)\n"
+"X-Launchpad-Export-Date: 2017-07-05 05:46+0000\n"
+"X-Generator: Launchpad (build 18419)\n"
 
 #: ../menulibre.desktop.in.h:1
 msgid "Menu Editor"
@@ -161,7 +161,7 @@ msgstr "DBus-Aktivierbar"
 
 #: ../data/ui/MenulibreWindow.ui.h:25
 msgid "Invalid desktop files detected! Please see details"
-msgstr ""
+msgstr "Ungültige Schreibtischdateien entdeckt! Bitte Details ansehen."
 
 #: ../data/ui/MenulibreWindow.ui.h:26
 msgid "Browse Icons…"
@@ -356,7 +356,7 @@ msgstr "Spalte"
 
 #: ../data/ui/MenulibreWindow.ui.h:68
 msgid "Log - Menulibre"
-msgstr ""
+msgstr "Protokoll – Menulibre"
 
 #: ../data/ui/MenulibreWindow.ui.h:69
 msgid "Search terms…"
@@ -731,7 +731,7 @@ msgstr "Neuer Ordner"
 #: ../menulibre/MenulibreApplication.py:1785
 #, python-format
 msgid "Could not find \"%s\" in your PATH."
-msgstr ""
+msgstr "»%s« kann nicht im PFAD gefunden werden."
 
 #: ../menulibre/MenulibreApplication.py:1807
 msgid "Are you sure you want to delete this separator?"
@@ -754,11 +754,11 @@ msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:1872
 msgid "All desktop files have been parsed successfully."
-msgstr ""
+msgstr "Alle Schreibtischdateien wurden erfolgreich analysiert."
 
 #: ../menulibre/MenulibreApplication.py:1901
 msgid "Check for bad desktop files"
-msgstr ""
+msgstr "Auf fehlerhafte Schreibtischdateien überprüfen"
 
 #: ../menulibre/MenulibreIconSelection.py:76
 msgid "Select an image"
@@ -827,7 +827,7 @@ msgstr ""
 #: ../menulibre/util.py:512
 #, python-format
 msgid "%s: Desktop file is valid??"
-msgstr ""
+msgstr "%s: Schreibtischdatei ist ungültig?"
 
 #~ msgid "Image File"
 #~ msgstr "Bilddatei"
