Launchpad automatic translations update.

--- a/po/hr.po
+++ b/po/hr.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-04-21 20:25-0400\n"
-"PO-Revision-Date: 2017-10-27 06:08+0000\n"
+"PO-Revision-Date: 2017-10-27 06:31+0000\n"
 "Last-Translator: zvacet <ikoli@yahoo.com>\n"
 "Language-Team: Croatian <hr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2017-10-27 06:17+0000\n"
+"X-Launchpad-Export-Date: 2017-10-28 06:43+0000\n"
 "X-Generator: Launchpad (build 18493)\n"
 "Language: hr\n"
 
@@ -792,7 +792,7 @@ msgstr ""
 #: ../menulibre/util.py:512
 #, python-format
 msgid "%s: Desktop file is valid??"
-msgstr ""
+msgstr "%s: Datoteka radne površine je valjana?"
 
 #~ msgid "Icon Name"
 #~ msgstr "Naziv ikone"
